# contato-vereadores-nacional

./: .gitignore  LICENSE  README.md  dashboard.py  main.py  prefeituras.csv  pyproject.toml  settings.toml
.antigravitycli/: b263aff0-cc41-4c0c-a1ce-ad3c48623d0f.json
.claude/: claude-powerline.json  settings.json
.devcontainer/: devcontainer.json
data/: vereadores-completo.json  vereadores-completo.parquet
data/bronze/: municipio_tse_ibge.parquet  prefeituras.csv  vereadores-completo.json
data/raw/: contato.csv  municipio_tse_ibge.csv  rede_social_candidato_2024.parquet  vereadores_eleitos_2024.csv  vereadores_eleitos_2024.parquet
data/silver/: contatos-vereadores.csv  dead_urls.json  model-pilot.json  prefeituras-validated.csv  prefeituras.csv  prefeituras.csv.bak  prefeituras.csv.bak3  results-sample2.jsonl  results-sample3.jsonl  results-sample4.jsonl  results-sample5.jsonl  results.jsonl  sapl-coverage-sample.jsonl  sapl-failures.csv  sapl-failures.jsonl  sigi-casas.csv  url-validation.jsonl  vereadores-sample.json  vereadores-sapl.jsonl
docs/: 2026-05-26-105726-local-command-caveatcaveat-the-messages-below.txt  2026-05-27-140601-analyze-todays-logfile.txt  ASYNC_FLOW.md  HISTORY.md  ONBOARDING.md
portfolio/: upwork_portfolio_guide.md
portfolio/walkthrough video/: upwork_video_script.md
scripts/: backfill_sapl_results.py  dashboard.py  dashboard_streamlit.py  model_pilot.py  pass2_probe.py  promote_final_urls.py  retry_timeouts.py  sapl_coverage.py  sapl_harvest.py  sigi_gapfill.py  validate_camara_urls.py  validate_prefeitura_urls.py  validate_urls.py
src/: config.py  fetcher.py  fetcher_async.py  logging_setup.py  pipeline.py  pipeline_async.py  sapl_client.py
tests/: test_fetcher.py
