[project]
name = "contato-vereadores-nacional"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "pyarrow>=24.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "rich>=15.0.0",
]
